Bayesian optimization overview chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,6 +11,24 @@
 %
 %  ===========================================================================
 
+@article{nando-bopt-tutorial,
+  author    = {Eric Brochu and
+               Vlad M. Cora and
+               Nando de Freitas},
+  title     = {A Tutorial on Bayesian Optimization of Expensive Cost Functions, with
+               Application to Active User Modeling and Hierarchical Reinforcement
+               Learning},
+  journal   = {CoRR},
+  volume    = {abs/1012.2599},
+  year      = {2010},
+  url       = {http://arxiv.org/abs/1012.2599},
+  archivePrefix = {arXiv},
+  eprint    = {1012.2599},
+  timestamp = {Mon, 13 Aug 2018 16:46:22 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1012-2599},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @book{murphy2012machine,
   title={Machine Learning: A Probabilistic Perspective},
   author={Murphy, K.P. and Bach, F.},
@@ -20,6 +38,16 @@
   url={https://books.google.cz/books?id=NZP6AQAAQBAJ},
   year={2012},
   publisher={MIT Press}
+}
+
+@article{lda-blei2003latent,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
 }
 
 @book{bishop2016pattern,
@@ -163,3 +191,25 @@
   year = "2016"
 }
 
+@inproceedings{maclaurin2015autograd,
+  title={Autograd: Effortless gradients in numpy},
+  author={Maclaurin, Dougal and Duvenaud, David and Adams, Ryan P},
+  booktitle={ICML 2015 AutoML Workshop},
+  year={2015}
+}
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
+
+@book{mitchell-mldef,
+  Author = {Tom M. Mitchell},
+  Title = {Machine Learning},
+  Publisher = {McGraw-Hill Education},
+  Year = {1997},
+  ISBN = {0070428077},
+  URL = {https://www.amazon.com/Machine-Learning-Tom-M-Mitchell/dp/0070428077?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0070428077}
+}
