--- a/math_commands.tex
+++ b/math_commands.tex
@@ -55,7 +55,7 @@
 
 \def\ceil#1{\lceil #1 \rceil}
 \def\floor#1{\lfloor #1 \rfloor}
-\def\1{\bm{1}}
+\def\1{\symbf{1}}
 \newcommand{\train}{\mathcal{D}}
 \newcommand{\valid}{\mathcal{D_{\mathrm{valid}}}}
 \newcommand{\test}{\mathcal{D_{\mathrm{test}}}}
@@ -247,36 +247,36 @@
 \def\ermZ{{\textnormal{Z}}}
 
 % Vectors
-\def\vzero{{\bm{0}}}
-\def\vone{{\bm{1}}}
-\def\vmu{{\bm{\mu}}}
-\def\vtheta{{\bm{\theta}}}
-\def\va{{\bm{a}}}
-\def\vb{{\bm{b}}}
-\def\vc{{\bm{c}}}
-\def\vd{{\bm{d}}}
-\def\ve{{\bm{e}}}
-\def\vf{{\bm{f}}}
-\def\vg{{\bm{g}}}
-\def\vh{{\bm{h}}}
-\def\vi{{\bm{i}}}
-\def\vj{{\bm{j}}}
-\def\vk{{\bm{k}}}
-\def\vl{{\bm{l}}}
-\def\vm{{\bm{m}}}
-\def\vn{{\bm{n}}}
-\def\vo{{\bm{o}}}
-\def\vp{{\bm{p}}}
-\def\vq{{\bm{q}}}
-\def\vr{{\bm{r}}}
-\def\vs{{\bm{s}}}
-\def\vt{{\bm{t}}}
-\def\vu{{\bm{u}}}
-\def\vv{{\bm{v}}}
-\def\vw{{\bm{w}}}
-\def\vx{{\bm{x}}}
-\def\vy{{\bm{y}}}
-\def\vz{{\bm{z}}}
+\def\vzero{{\symbf{0}}}
+\def\vone{{\symbf{1}}}
+\def\vmu{{\symbf{\mu}}}
+\def\vtheta{{\symbf{\theta}}}
+\def\va{{\symbf{a}}}
+\def\vb{{\symbf{b}}}
+\def\vc{{\symbf{c}}}
+\def\vd{{\symbf{d}}}
+\def\ve{{\symbf{e}}}
+\def\vf{{\symbf{f}}}
+\def\vg{{\symbf{g}}}
+\def\vh{{\symbf{h}}}
+\def\vi{{\symbf{i}}}
+\def\vj{{\symbf{j}}}
+\def\vk{{\symbf{k}}}
+\def\vl{{\symbf{l}}}
+\def\vm{{\symbf{m}}}
+\def\vn{{\symbf{n}}}
+\def\vo{{\symbf{o}}}
+\def\vp{{\symbf{p}}}
+\def\vq{{\symbf{q}}}
+\def\vr{{\symbf{r}}}
+\def\vs{{\symbf{s}}}
+\def\vt{{\symbf{t}}}
+\def\vu{{\symbf{u}}}
+\def\vv{{\symbf{v}}}
+\def\vw{{\symbf{w}}}
+\def\vx{{\symbf{x}}}
+\def\vy{{\symbf{y}}}
+\def\vz{{\symbf{z}}}
 
 % Elements of vectors
 \def\evalpha{{\alpha}}
@@ -316,42 +316,42 @@
 \def\evz{{z}}
 
 % Matrix
-\def\mA{{\bm{A}}}
-\def\mB{{\bm{B}}}
-\def\mC{{\bm{C}}}
-\def\mD{{\bm{D}}}
-\def\mE{{\bm{E}}}
-\def\mF{{\bm{F}}}
-\def\mG{{\bm{G}}}
-\def\mH{{\bm{H}}}
-\def\mI{{\bm{I}}}
-\def\mJ{{\bm{J}}}
-\def\mK{{\bm{K}}}
-\def\mL{{\bm{L}}}
-\def\mM{{\bm{M}}}
-\def\mN{{\bm{N}}}
-\def\mO{{\bm{O}}}
-\def\mP{{\bm{P}}}
-\def\mQ{{\bm{Q}}}
-\def\mR{{\bm{R}}}
-\def\mS{{\bm{S}}}
-\def\mT{{\bm{T}}}
-\def\mU{{\bm{U}}}
-\def\mV{{\bm{V}}}
-\def\mW{{\bm{W}}}
-\def\mX{{\bm{X}}}
-\def\mY{{\bm{Y}}}
-\def\mZ{{\bm{Z}}}
-\def\mBeta{{\bm{\beta}}}
-\def\mPhi{{\bm{\Phi}}}
-\def\mLambda{{\bm{\Lambda}}}
-\def\mSigma{{\bm{\Sigma}}}
-\def\mZero{{\bm{0}}}
+\def\mA{{\symbf{A}}}
+\def\mB{{\symbf{B}}}
+\def\mC{{\symbf{C}}}
+\def\mD{{\symbf{D}}}
+\def\mE{{\symbf{E}}}
+\def\mF{{\symbf{F}}}
+\def\mG{{\symbf{G}}}
+\def\mH{{\symbf{H}}}
+\def\mI{{\symbf{I}}}
+\def\mJ{{\symbf{J}}}
+\def\mK{{\symbf{K}}}
+\def\mL{{\symbf{L}}}
+\def\mM{{\symbf{M}}}
+\def\mN{{\symbf{N}}}
+\def\mO{{\symbf{O}}}
+\def\mP{{\symbf{P}}}
+\def\mQ{{\symbf{Q}}}
+\def\mR{{\symbf{R}}}
+\def\mS{{\symbf{S}}}
+\def\mT{{\symbf{T}}}
+\def\mU{{\symbf{U}}}
+\def\mV{{\symbf{V}}}
+\def\mW{{\symbf{W}}}
+\def\mX{{\symbf{X}}}
+\def\mY{{\symbf{Y}}}
+\def\mZ{{\symbf{Z}}}
+\def\mBeta{{\symbf{\beta}}}
+\def\mPhi{{\symbf{\Phi}}}
+\def\mLambda{{\symbf{\Lambda}}}
+\def\mSigma{{\symbf{\Sigma}}}
+\def\mZero{{\symbf{0}}}
 
 % Tensor
 \DeclareMathAlphabet{\mathsfit}{\encodingdefault}{\sfdefault}{m}{sl}
 \SetMathAlphabet{\mathsfit}{bold}{\encodingdefault}{\sfdefault}{bx}{n}
-\newcommand{\tens}[1]{\bm{\mathsfit{#1}}}
+\newcommand{\tens}[1]{\symbf{\mathsfit{#1}}}
 \def\tA{{\tens{A}}}
 \def\tB{{\tens{B}}}
 \def\tC{{\tens{C}}}
@@ -468,7 +468,7 @@
 \def\emSigma{{\Sigma}}
 
 % entries of a tensor
-% Same font as tensor, without \bm wrapper
+% Same font as tensor, without \symbf wrapper
 \newcommand{\etens}[1]{\mathsfit{#1}}
 \def\etLambda{{\etens{\Lambda}}}
 \def\etA{{\etens{A}}}
