--- a/thesis.tex
+++ b/thesis.tex
@@ -66,6 +66,7 @@
 \usepackage{hyperref}
 \usepackage{url}
 
+\usepackage{algorithm2e}
 
 % \usepackage{mathtools}
 % \DeclarePairedDelimiterX{\infdivx}[2]{(}{)}{%
@@ -82,7 +83,7 @@
 
 \input{math_commands.tex}
 
-\usepackage[italic,noendash]{mathastext}
+\usepackage[italic,noendash]{mathastext} 
 \usepackage{unicode-math}
 
 \def\ThesisTitle{Bayesian Optimization of Hyperparameters Using Gaussian Processes}
