--- a/notation.tex
+++ b/notation.tex
@@ -9,7 +9,9 @@
 
 This section provides a concise reference describing notation used throughout
 this document.  If you are unfamiliar with any of the corresponding
-mathematical concepts, \citet{dlbook} describe most of these ideas in chapters
+mathematical concepts,
+% \citet{dlbook}
+describe most of these ideas in chapters
 2--4.
 
 \vspace{\notationgap}
