Chapter 2 mostly done

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -213,3 +213,143 @@
   ISBN = {0070428077},
   URL = {https://www.amazon.com/Machine-Learning-Tom-M-Mitchell/dp/0070428077?SubscriptionId=AKIAIOBINVZYXZQZ2U3A&tag=chimbori05-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0070428077}
 }
+
+@article{nando-bayesian-out-of-the-loop,
+  title={Taking the human out of the loop: A review of bayesian optimization},
+  author={Shahriari, Bobak and Swersky, Kevin and Wang, Ziyu and Adams, Ryan P and De Freitas, Nando},
+  journal={Proceedings of the IEEE},
+  volume={104},
+  number={1},
+  pages={148--175},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{integer-valued-gp,
+  title={Dealing with Integer-valued Variables in Bayesian Optimization with Gaussian Processes},
+  author={Garrido-Merch{\'a}n, Eduardo C and Hern{\'a}ndez-Lobato, Daniel},
+  journal={arXiv preprint arXiv:1706.03673},
+  year={2017}
+}
+
+@article{nasnet,
+  author    = {Barret Zoph and
+               Vijay Vasudevan and
+               Jonathon Shlens and
+               Quoc V. Le},
+  title     = {Learning Transferable Architectures for Scalable Image Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1707.07012},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1707.07012},
+  archivePrefix = {arXiv},
+  eprint    = {1707.07012},
+  timestamp = {Mon, 13 Aug 2018 16:48:00 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/ZophVSL17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{overview-of-sgd,
+  title={An overview of gradient descent optimization algorithms},
+  author={Ruder, Sebastian},
+  journal={arXiv preprint arXiv:1609.04747},
+  year={2016}
+}
+
+@proceedings{google-vizier,
+title	= {Google Vizier: A Service for Black-Box Optimization},
+editor	= {Daniel Golovin and Benjamin Solnik and Subhodeep Moitra and Greg Kochanski and John Elliot Karro and D. Sculley},
+year	= {2017},
+URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-box-optimization}
+}
+
+@misc{spearmint,
+  author = {Harvard Intelligent Probabilistic Systems Group},
+  title = {Spearmint},
+  year = {2014},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/HIPS/Spearmint}},
+  commit = {990d27d4477bbc9b0d5cfb2c950fc387decf6ea2}
+}
+
+@Misc{gpy2014,
+  author =   {{GPy}},
+  title =    {{GPy}: A Gaussian process framework in python},
+  howpublished = {\url{http://github.com/SheffieldML/GPy}},
+  year = {since 2012}
+}
+
+@Misc{gpyopt2016,
+  author =   {The GPyOpt authors},
+  title =    {{GPyOpt}: A Bayesian Optimization framework in python},
+  howpublished = {\url{http://github.com/SheffieldML/GPyOpt}},
+  year = {2016}
+}
+
+@misc{scikit-optimize,
+  author       = {Tim Head and
+                  MechCoder and
+                  Gilles Louppe and
+                  Iaroslav Shcherbatyi and
+                  fcharras and
+                  Zé Vinícius and
+                  cmmalone and
+                  Christopher Schröder and
+                  nel215 and
+                  Nuno Campos and
+                  Todd Young and
+                  Stefano Cereda and
+                  Thomas Fan and
+                  rene-rex and
+                  Kejia (KJ) Shi and
+                  Justus Schwabedal and
+                  carlosdanielcsantos and
+                  Hvass-Labs and
+                  Mikhail Pak and
+                  SoManyUsernamesTaken and
+                  Fred Callaway and
+                  Loïc Estève and
+                  Lilian Besson and
+                  Mehdi Cherti and
+                  Karlson Pfannschmidt and
+                  Fabian Linzberger and
+                  Christophe Cauet and
+                  Anna Gut and
+                  Andreas Mueller and
+                  Alexander Fabisch},
+  title        = {scikit-optimize/scikit-optimize: v0.5.2},
+  month        = mar,
+  year         = 2018,
+  doi          = {10.5281/zenodo.1207017},
+  url          = {https://doi.org/10.5281/zenodo.1207017}
+}
+
+@book{russell2016artificial,
+  title={Artificial intelligence: a modern approach},
+  author={Russell, Stuart J and Norvig, Peter},
+  year={2016},
+  publisher={Malaysia; Pearson Education Limited,}
+}
+
+@misc{openai-five,
+  title = {{OpenAI} Five},
+  howpublished = {\url{https://openai.com/five/}},
+  note = {Accessed: 2019-04-22}
+}
+
+@article{nvidia-stylegan,
+  author    = {Tero Karras and
+               Samuli Laine and
+               Timo Aila},
+  title     = {A Style-Based Generator Architecture for Generative Adversarial Networks},
+  journal   = {CoRR},
+  volume    = {abs/1812.04948},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1812.04948},
+  archivePrefix = {arXiv},
+  eprint    = {1812.04948},
+  timestamp = {Tue, 01 Jan 2019 15:01:25 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1812-04948},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
