Theory up to sampling

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -353,3 +353,12 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
   biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1812-04948},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{box-muller1958note,
+  title={A note on the generation of random normal deviates},
+  author={Box, George EP},
+  journal={Ann. Math. Stat.},
+  volume={29},
+  pages={610--611},
+  year={1958}
+}
