Add GP regression with noise-free observations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -362,3 +362,12 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
   pages={610--611},
   year={1958}
 }
+
+@book{williams2006gaussian,
+  title={Gaussian processes for machine learning},
+  author={Williams, Christopher KI and Rasmussen, Carl Edward},
+  volume={2},
+  number={3},
+  year={2006},
+  publisher={MIT Press Cambridge, MA}
+}
