Notes & minor fixes

--- a/math_commands.tex
+++ b/math_commands.tex
@@ -12,7 +12,7 @@
 \newcommand{\captiond}{{\em (d)}}
 
 % Highlight a newly defined term
-\newcommand{\newterm}[1]{{\bf #1 \index{#1}}}
+\newcommand{\newterm}[1]{{\bf #1\index{#1}}}
 
 
 % Figure reference, lower-case.
@@ -247,36 +247,36 @@
 \def\ermZ{{\textnormal{Z}}}
 
 % Vectors
-\def\vzero{{\symbf{0}}}
-\def\vone{{\symbf{1}}}
-\def\vmu{{\symbf{\mu}}}
-\def\vtheta{{\symbf{\theta}}}
-\def\va{{\symbf{a}}}
-\def\vb{{\symbf{b}}}
-\def\vc{{\symbf{c}}}
-\def\vd{{\symbf{d}}}
-\def\ve{{\symbf{e}}}
-\def\vf{{\symbf{f}}}
-\def\vg{{\symbf{g}}}
-\def\vh{{\symbf{h}}}
-\def\vi{{\symbf{i}}}
-\def\vj{{\symbf{j}}}
-\def\vk{{\symbf{k}}}
-\def\vl{{\symbf{l}}}
-\def\vm{{\symbf{m}}}
-\def\vn{{\symbf{n}}}
-\def\vo{{\symbf{o}}}
-\def\vp{{\symbf{p}}}
-\def\vq{{\symbf{q}}}
-\def\vr{{\symbf{r}}}
-\def\vs{{\symbf{s}}}
-\def\vt{{\symbf{t}}}
-\def\vu{{\symbf{u}}}
-\def\vv{{\symbf{v}}}
-\def\vw{{\symbf{w}}}
-\def\vx{{\symbf{x}}}
-\def\vy{{\symbf{y}}}
-\def\vz{{\symbf{z}}}
+\def\vzero{{\boldsymbol{0}}}
+\def\vone{{\boldsymbol{1}}}
+\def\vmu{{\symbfit{\mu}}}
+\def\vtheta{{\boldsymbol{\theta}}}
+\def\va{{\boldsymbol{a}}}
+\def\vb{{\boldsymbol{b}}}
+\def\vc{{\boldsymbol{c}}}
+\def\vd{{\boldsymbol{d}}}
+\def\ve{{\boldsymbol{e}}}
+\def\vf{{\boldsymbol{f}}}
+\def\vg{{\boldsymbol{g}}}
+\def\vh{{\boldsymbol{h}}}
+\def\vi{{\boldsymbol{i}}}
+\def\vj{{\boldsymbol{j}}}
+\def\vk{{\boldsymbol{k}}}
+\def\vl{{\boldsymbol{l}}}
+\def\vm{{\boldsymbol{m}}}
+\def\vn{{\boldsymbol{n}}}
+\def\vo{{\boldsymbol{o}}}
+\def\vp{{\boldsymbol{p}}}
+\def\vq{{\boldsymbol{q}}}
+\def\vr{{\boldsymbol{r}}}
+\def\vs{{\boldsymbol{s}}}
+\def\vt{{\boldsymbol{t}}}
+\def\vu{{\boldsymbol{u}}}
+\def\vv{{\boldsymbol{v}}}
+\def\vw{{\boldsymbol{w}}}
+\def\vx{{\boldsymbol{x}}}
+\def\vy{{\boldsymbol{y}}}
+\def\vz{{\boldsymbol{z}}}
 
 % Elements of vectors
 \def\evalpha{{\alpha}}
