Noisy GP regression + kernel hyperparam optimization

--- a/thesis.tex
+++ b/thesis.tex
@@ -74,6 +74,7 @@
 % }
 % \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
+\newcommand{\cov}{\operatorname{cov}}
 \newcommand{\kldiv}{D_{KL}\infdivx}
 
 \usepackage{braket}
