Add basic info about acquisition functions

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -371,3 +371,10 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
   year={2006},
   publisher={MIT Press Cambridge, MA}
 }
+
+@article{frazier2018tutorial,
+  title={A tutorial on Bayesian optimization},
+  author={Frazier, Peter I},
+  journal={arXiv preprint arXiv:1807.02811},
+  year={2018}
+}
