Add parallel evaluations

--- a/thesis.tex
+++ b/thesis.tex
@@ -75,6 +75,7 @@
 % \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 \newcommand{\cov}{\operatorname{cov}}
+% \newcommand{\argmax}{\operatorname{argmax}}
 \newcommand{\kldiv}{D_{KL}\infdivx}
 
 \usepackage{braket}
