More bopt and software written

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -378,3 +378,7 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
   journal={arXiv preprint arXiv:1807.02811},
   year={2018}
 }
+
+
+@Techreport{python, title= {Python tutorial}, author = {G. van Rossum}, number={CS-R9526}, institution= {Centrum voor Wiskunde en Informatica (CWI)}, year= {1995}, address={Amsterdam}, month={May} }
+
