--- a/thesis.tex
+++ b/thesis.tex
@@ -77,6 +77,8 @@
 \newcommand{\cov}{\operatorname{cov}}
 % \newcommand{\argmax}{\operatorname{argmax}}
 \newcommand{\kldiv}{D_{KL}\infdivx}
+\def\bopt{\texttt{bopt} }
+\newcommand{\inlinecode}{\texttt}
 
 \usepackage{braket}
 
@@ -144,7 +146,7 @@ Abstract.
 
 \tableofcontents
 
-\include{chapters/preface}
+% \include{chapters/preface}
 % \include{notation}
 \include{chapters/chap00}
 
