Section about runners

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -382,3 +382,8 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 
 @Techreport{python, title= {Python tutorial}, author = {G. van Rossum}, number={CS-R9526}, institution= {Centrum voor Wiskunde en Informatica (CWI)}, year= {1995}, address={Amsterdam}, month={May} }
 
+@misc{sge,
+	title = {{SGE}},
+	howpublished = {\url{https://arc.liv.ac.uk/trac/SGE}},
+	note = {Accessed: 2019-04-27}
+}
