Add a big part of the software chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -387,3 +387,86 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 	howpublished = {\url{https://arc.liv.ac.uk/trac/SGE}},
 	note = {Accessed: 2019-04-27}
 }
+
+@misc{paramz,
+	title = {{paramz}},
+	howpublished = {\url{https://github.com/sods/paramz}},
+	note = {Accessed: 2019-04-27}
+}
+
+@Misc{scipy,
+	author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+	title =     {{SciPy}: Open source scientific tools for {Python}},
+	year =      {2001--},
+	url = "http://www.scipy.org/",
+	note = {[Online; accessed <today>]}
+}
+
+@ARTICLE{numpy, 
+	author={S. {van der Walt} and S. C. {Colbert} and G. {Varoquaux}}, 
+	journal={Computing in Science Engineering}, 
+	title={The NumPy Array: A Structure for Efficient Numerical Computation}, 
+	year={2011}, 
+	volume={13}, 
+	number={2}, 
+	pages={22-30}, 
+	keywords={data structures;high level languages;mathematics computing;numerical analysis;numerical computation;numpy array;numerical data;high level language;Python programming language;Arrays;Numerical analysis;Performance evaluation;Computational efficiency;Finite element methods;Vector quantization;Resource management;Python;NumPy;scientific programming;numerical computations;programming libraries}, 
+	doi={10.1109/MCSE.2011.37}, 
+	ISSN={1521-9615}, 
+	month={March},}
+
+@misc{tensorflow2015-whitepaper,
+	title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+	url={https://www.tensorflow.org/},
+	note={Software available from tensorflow.org},
+	author={
+	Mart\'{\i}n~Abadi and
+	Ashish~Agarwal and
+	Paul~Barham and
+	Eugene~Brevdo and
+	Zhifeng~Chen and
+	Craig~Citro and
+	Greg~S.~Corrado and
+	Andy~Davis and
+	Jeffrey~Dean and
+	Matthieu~Devin and
+	Sanjay~Ghemawat and
+	Ian~Goodfellow and
+	Andrew~Harp and
+	Geoffrey~Irving and
+	Michael~Isard and
+	Yangqing Jia and
+	Rafal~Jozefowicz and
+	Lukasz~Kaiser and
+	Manjunath~Kudlur and
+	Josh~Levenberg and
+	Dandelion~Man\'{e} and
+	Rajat~Monga and
+	Sherry~Moore and
+	Derek~Murray and
+	Chris~Olah and
+	Mike~Schuster and
+	Jonathon~Shlens and
+	Benoit~Steiner and
+	Ilya~Sutskever and
+	Kunal~Talwar and
+	Paul~Tucker and
+	Vincent~Vanhoucke and
+	Vijay~Vasudevan and
+	Fernanda~Vi\'{e}gas and
+	Oriol~Vinyals and
+	Pete~Warden and
+	Martin~Wattenberg and
+	Martin~Wicke and
+	Yuan~Yu and
+	Xiaoqiang~Zheng},
+	year={2015},
+}
+
+@inproceedings{snoek2012practical,
+	title={Practical bayesian optimization of machine learning algorithms},
+	author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+	booktitle={Advances in neural information processing systems},
+	pages={2951--2959},
+	year={2012}
+}
