--- a/thesis.tex
+++ b/thesis.tex
@@ -68,6 +68,12 @@
 
 \usepackage{algorithm2e}
 
+\usepackage{listings}
+\lstset{
+	language=bash,
+	basicstyle=\ttfamily
+}
+
 % \usepackage{mathtools}
 % \DeclarePairedDelimiterX{\infdivx}[2]{(}{)}{%
 %   #1\;\delimsize\|\;#2%
