--- a/bibliography.bib
+++ b/bibliography.bib
@@ -470,3 +470,12 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 	pages={2951--2959},
 	year={2012}
 }
+
+@inproceedings{cholesky-inverse-krishnamoorthy2013matrix,
+	title={Matrix inversion using Cholesky decomposition},
+	author={Krishnamoorthy, Aravindh and Menon, Deepak},
+	booktitle={2013 Signal Processing: Algorithms, Architectures, Arrangements, and Applications (SPA)},
+	pages={70--72},
+	year={2013},
+	organization={IEEE}
+}
