--- a/thesis.tex
+++ b/thesis.tex
@@ -81,6 +81,10 @@
 % \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 \newcommand{\cov}{\operatorname{cov}}
+\newcommand{\chol}{\operatorname{chol}}
+\newcommand{\inv}{\operatorname{inv}}
+\newcommand{\diag}{\operatorname{diag}}
+
 % \newcommand{\argmax}{\operatorname{argmax}}
 \newcommand{\kldiv}{D_{KL}\infdivx}
 \def\bopt{\texttt{bopt} }
