--- a/bibliography.bib
+++ b/bibliography.bib
@@ -479,3 +479,42 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 	year={2013},
 	organization={IEEE}
 }
+
+@INPROCEEDINGS{robo,
+	author    = {A. Klein and S. Falkner and N. Mansur and F. Hutter},
+	title     = {RoBO: A Flexible and Robust Bayesian Optimization Framework in Python},
+	booktitle = {NIPS 2017 Bayesian Optimization Workshop},
+	year      = {2017},
+	month     = dec,
+}
+
+@misc{automl,
+	title = {AutoML},
+	howpublished = {\url{https://www.automl.org/automl/}},
+	note = {Accessed: 2019-04-30}
+}
+
+@misc{sigopt,
+	title = {SigOpt},
+	howpublished = {\url{https://sigopt.com/product/optimization-engine/}},
+	note = {Accessed: 2019-04-30}
+}
+
+@misc{amazon-sagemaker,
+	title = {Amazon SageMaker},
+	howpublished = {\url{https://docs.aws.amazon.com/sagemaker/latest/dg/automatic-model-tuning-how-it-works.html}},
+	note = {Accessed: 2019-04-30}
+}
+
+@inbook{tpot,
+	author={Olson, Randal S. and Urbanowicz, Ryan J. and Andrews, Peter C. and Lavender, Nicole A. and Kidd, La Creis and Moore, Jason H.},
+	editor={Squillero, Giovanni and Burelli, Paolo},
+	chapter={Automating Biomedical Data Science Through Tree-Based Pipeline Optimization},
+	title={Applications of Evolutionary Computation: 19th European Conference, EvoApplications 2016, Porto, Portugal, March 30 -- April 1, 2016, Proceedings, Part I},
+	year={2016},
+	publisher={Springer International Publishing},
+	pages={123--137},
+	isbn={978-3-319-31204-0},
+	doi={10.1007/978-3-319-31204-0_9},
+	url={http://dx.doi.org/10.1007/978-3-319-31204-0_9}
+}
