--- a/thesis.tex
+++ b/thesis.tex
@@ -158,7 +158,22 @@ Abstract.
 
 % \include{chapters/preface}
 % \include{notation}
-\include{chapters/chap00}
+
+\include{chapters/introduction}
+\include{chapters/bayesian-optimization-overview}
+\include{chapters/gaussian-processes}
+\include{chapters/bayesian-optimization-indepth}
+\include{chapters/software}
+\include{chapters/experiments}
+
+- parser
+- tokenizer/segmentace
+- speech recognition
+- opennmt lemmatizace
+- reinforce\_with\_baseline
+
+
+
 
 % \include{chap01}
 % \include{chap02}
@@ -175,11 +190,11 @@ Abstract.
 
 %%% Tables used in the thesis (consider if this is needed)
 %%% In mathematical theses, it could be better to move the list of tables to the beginning of the thesis.
-\listoftables
+% \listoftables
 
 %%% Abbreviations used in the thesis, if any, including their explanation
 %%% In mathematical theses, it could be better to move the list of abbreviations to the beginning of the thesis.
-\chapwithtoc{List of Abbreviations}
+% \chapwithtoc{List of Abbreviations}
 
 %%% Attachments to the master thesis, if any. Each attachment must be
 %%% referred to at least once from the text of the thesis. Attachments
@@ -193,9 +208,9 @@ Abstract.
 %%% should be uploaded to SIS and optionally also included in the thesis on a~CD/DVD.
 %%% Allowed file formats are specified in provision of the rector no. 72/2017.
 \appendix
-\chapter{Attachments}
+%\chapter{Attachments}
 
-\section{First Attachment}
+%\section{First Attachment}
 
 \printindex
 
