--- a/bibliography.bib
+++ b/bibliography.bib
@@ -518,3 +518,9 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 	doi={10.1007/978-3-319-31204-0_9},
 	url={http://dx.doi.org/10.1007/978-3-319-31204-0_9}
 }
+
+@misc{sigmorphon2019task2,
+	title = {SIGMORPHON 2019 Task 2: Morphological Analysis and Lemmatization in Context},
+	howpublished = {\url{https://sigmorphon.github.io/sharedtasks/2019/task2/}},
+	note = {ACcessed: 2019-05-02}
+}
