--- a/thesis.tex
+++ b/thesis.tex
@@ -14,7 +14,7 @@
 % \openright makes the following text appear on a right-hand page
 \let\openright=\clearpage
 
-
+%\linespread{1.2}
 % \overfullrule=1mm
 
 %% Settings for two-sided (duplex) printing
