--- a/bibliography.bib
+++ b/bibliography.bib
@@ -524,3 +524,24 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 	howpublished = {\url{https://sigmorphon.github.io/sharedtasks/2019/task2/}},
 	note = {ACcessed: 2019-05-02}
 }
+
+@book{suttonbarto2018reinforcement,
+	title={Reinforcement learning: an Introduction},
+	author={Richard, Sutton and SUTTON, BARTO and ANDREW, G},
+	year={2018},
+	publisher={MIT Press}
+}
+
+@InProceedings{udpipe:2017,
+	author    = {Straka, Milan  and  Strakov\'{a}, Jana},
+	title     = {Tokenizing, POS Tagging, Lemmatizing and Parsing UD 2.0 with UDPipe},
+	booktitle = {Proceedings of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+	month     = {August},
+	year      = {2017},
+	address   = {Vancouver, Canada},
+	publisher = {Association for Computational Linguistics},
+	pages     = {88--99},
+	url       = {http://www.aclweb.org/anthology/K/K17/K17-3009.pdf}
+}
+
+
