Make all autoref labels uppercase.

--- a/macros.tex
+++ b/macros.tex
@@ -85,3 +85,15 @@
 %%% Various table goodies
 \newcommand{\pulrad}[1]{\raisebox{1.5ex}[0pt]{#1}}
 \newcommand{\mc}[1]{\multicolumn{1}{c}{#1}}
+
+%%% Uppercase autoref labels
+\renewcommand{\footnoteautorefname}{Footnote}
+\renewcommand{\itemautorefname}{Item}
+\renewcommand{\chapterautorefname}{Chapter}
+\renewcommand{\sectionautorefname}{Section}
+\renewcommand{\subsectionautorefname}{Subsection}
+\renewcommand{\subsubsectionautorefname}{Subsubsection}
+\renewcommand{\paragraphautorefname}{Paragraph}
+\renewcommand{\subparagraphautorefname}{Subparagraph}
+\renewcommand{\FancyVerbLineautorefname}{Line}
+\renewcommand{\pageautorefname}{Page}
