--- a/bibliography.bib
+++ b/bibliography.bib
@@ -490,6 +490,7 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 
 @misc{automl,
 	title = {AutoML},
+	key = {AutoML},
 	howpublished = {\url{https://www.automl.org/automl/}},
 	note = {Accessed: 2019-04-30}
 }
