--- a/macros.tex
+++ b/macros.tex
@@ -97,3 +97,4 @@
 \renewcommand{\subparagraphautorefname}{Subparagraph}
 \renewcommand{\FancyVerbLineautorefname}{Line}
 \renewcommand{\pageautorefname}{Page}
+\renewcommand{\algorithmautorefname}{Algorithm}
