--- a/bibliography.bib
+++ b/bibliography.bib
@@ -522,6 +522,7 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 
 @misc{sigmorphon2019task2,
 	title = {SIGMORPHON 2019 Task 2: Morphological Analysis and Lemmatization in Context},
+	key = {{SIG2019T2}},
 	howpublished = {\url{https://sigmorphon.github.io/sharedtasks/2019/task2/}},
 	note = {ACcessed: 2019-05-02}
 }
