Conclusion & future work

--- a/thesis.tex
+++ b/thesis.tex
@@ -126,7 +126,7 @@
 % An optional dedication: you can thank whomever you wish (your supervisor,
 % consultant, a person who lent the software, etc.)
 \def\Dedication{%
-Dedication.
+\todo{Dedication}.
 }
 
 % Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
