Use \xspace package to fix spacing issues in "\bopt."

--- a/thesis.tex
+++ b/thesis.tex
@@ -75,6 +75,8 @@
 	basicstyle=\ttfamily
 }
 
+\usepackage{xspace}
+
 % \usepackage{mathtools}
 % \DeclarePairedDelimiterX{\infdivx}[2]{(}{)}{%
 %   #1\;\delimsize\|\;#2%
@@ -88,7 +90,7 @@
 
 % \newcommand{\argmax}{\operatorname{argmax}}
 \newcommand{\kldiv}{D_{KL}\infdivx}
-\def\bopt{\texttt{bopt} }
+\def\bopt{\texttt{bopt}\xspace} % With an explicit space, "architecture of \bopt." added space before the fullstop.
 \newcommand{\inlinecode}{\texttt}
 
 \usepackage{braket}
