Remove notes and epilog chapter.

--- a/thesis.tex
+++ b/thesis.tex
@@ -169,22 +169,13 @@ Abstract.
 \include{chapters/software}
 \include{chapters/experiments}
 
-- parser
-- tokenizer/segmentace
-- speech recognition
-- opennmt lemmatizace
-- reinforce\_with\_baseline
-
-
-
-
 % \include{chap01}
 % \include{chap02}
 % \include{chap03}
 % \include{chap04}
 % \include{chap06}
 
-\include{chapters/epilog}
+%\include{chapters/epilog}
 
 \include{bibliography}
 
