Add eggholder + tokenizer comparison with random search + remove en/gr treebank mentions

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -546,3 +546,8 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 }
 
 
+@article{eggholder,
+	title={Certified global minima for a benchmark of difficult optimization problems},
+	author={Vanaret, Charlie and Gotteland, Jean-Baptiste and Durand, Nicolas and Alliot, Jean-Marc},
+	year={2014}
+}
