--- a/bibliography.bib
+++ b/bibliography.bib
@@ -397,7 +397,7 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 @Misc{scipy,
 	author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
 	title =     {{SciPy}: Open source scientific tools for {Python}},
-	year =      {2001--},
+	year =      {2001},
 	url = "http://www.scipy.org/",
 	note = {[Online; accessed <today>]}
 }
