Add acknowledgements, missing grid search comparision, fix slugs, fix broken figures

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -389,7 +389,7 @@ URL	= {http://www.kdd.org/kdd2017/papers/view/google-vizier-a-service-for-black-
 }
 
 @misc{paramz,
-	title = {{paramz}},
+	key = {{paramz}},
 	howpublished = {\url{https://github.com/sods/paramz}},
 	note = {Accessed: 2019-04-27}
 }
