--- a/thesis.tex
+++ b/thesis.tex
@@ -14,8 +14,9 @@
 % \openright makes the following text appear on a right-hand page
 \let\openright=\clearpage
 
+
 %\linespread{1.2}
-% \overfullrule=1mm
+% \overfullrule=0mm
 
 %% Settings for two-sided (duplex) printing
 % \documentclass[12pt,a4paper,twoside,openright]{report}
@@ -128,7 +129,9 @@
 % An optional dedication: you can thank whomever you wish (your supervisor,
 % consultant, a person who lent the software, etc.)
 \def\Dedication{%
-\todo{Dedication}.
+I would like to express my gratitude to Milan Straka for his supervision, guidance, and an incredible amount of enthusiasm. His advice and ideas were immensely helpful.
+
+I would also like to thank my wife Zuzana for her endless patience and support throughout the long hours I have spent working on this thesis. Without her, this thesis would not have been possible.
 }
 
 % Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
