--- a/thesis.tex
+++ b/thesis.tex
@@ -101,8 +101,8 @@
 
 \input{math_commands.tex}
 
-\usepackage[italic,noendash]{mathastext} 
-\usepackage{unicode-math}
+\usepackage[italic,noendash]{mathastext}
+% \usepackage{unicode-math}
 
 \def\ThesisTitle{Bayesian Optimization of Hyperparameters Using Gaussian Processes}
 \def\ThesisAuthor{Bc. Jakub Arnold}
