Remove charter font as it messes with pdflatex + remove last bits of unicode math :(

--- a/thesis.tex
+++ b/thesis.tex
@@ -30,7 +30,7 @@
 % \let\openright=\cleardoublepage
 
 %% Generate PDF/A-2u
-% \usepackage[a-2u]{pdfx}
+\usepackage[a-2u]{pdfx}
 
 \usepackage[utf8]{inputenc}
 
@@ -43,8 +43,8 @@
 %% Further useful packages (included in most LaTeX distributions)
 \usepackage{amsmath}        % extensions for typesetting of math
 % TODO: pick a font
-% \usepackage{amsfonts}       % math fonts
-\usepackage[charter]{mathdesign}
+\usepackage{amsfonts}       % math fonts
+% \usepackage[charter]{mathdesign}
 % \usepackage{millennial}
 \usepackage[makeroom]{cancel}
 
